updated meta description, fixed alignment of suggested itinerary in detail page, refactored booking boxes

--- a/sass/layout/_experience-box.scss
+++ b/sass/layout/_experience-box.scss
@@ -126,4 +126,5 @@
 
 .price-box-sm p {
   font-weight: normal;
+  margin-left: 0;
 }
